force-app/main/default/objects/Tripslog__c/Tripslog__c.object-meta.xml
<CustomObject>
    <label>Tripslog</label>
    <nameField>
        <displayFormat>Tripno-{0000000}</displayFormat>
        <label>Triplog No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tripslogs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>