force-app/main/default/objects/Tripslog__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Tripslogs</relationshipLabel>
    <relationshipName>Tripslogs</relationshipName>
    <type>Lookup</type>
</CustomField>