force-app/main/default/objects/Tripslog__c/fields/Employee_Reimbursement__c.field-meta.xml
<CustomField>
    <fullName>Employee_Reimbursement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Employee Reimbursement</description>
    <inlineHelpText>Employee Reimbursement</inlineHelpText>
    <label>Employee Reimbursement</label>
    <referenceTo>Employee_Reimbursement__c</referenceTo>
    <relationshipLabel>Tripslogs</relationshipLabel>
    <relationshipName>Tripslogs</relationshipName>
    <type>Lookup</type>
</CustomField>