force-app/main/default/objects/Tripslog__c/fields/Total_Mileages__c.field-meta.xml
<CustomField>
    <fullName>Total_Mileages__c</fullName>
    <label>Total Mileages</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>