force-app/main/default/objects/Tripslog__c/fields/Total_Trips__c.field-meta.xml
<CustomField>
    <fullName>Total_Trips__c</fullName>
    <label>Total Trips</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>