force-app/main/default/objects/Tripslog__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Employee_Reimbursement__c</columns>
    <columns>Contact__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Endpoint__c</columns>
    <columns>Log_Time__c</columns>
    <columns>Response__c</columns>
    <columns>Status__c</columns>
    <columns>Total_Trips__c</columns>
    <columns>Total_Mileages__c</columns>
    <columns>Response_Data__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>